Modifies payee route, views, and updates user#show.
Changes payee#new to manually include user_id in params.
Modifies user#show to be an index of user's payees.
Modifies links on payee pages to reroute back to user, not to payees path.
Removes category as an attribute of payee.
Modifies payee controller to set user for payees upon creation.

--- a/app/views/payees/_form.html.erb
+++ b/app/views/payees/_form.html.erb
@@ -19,10 +19,10 @@
     <%= f.label :recurring %><br>
     <%= f.text_field :recurring %>
   </div>
-  <div class="field">
-    <%= f.label :user_id %><br>
-    <%= f.text_field :user_id %>
-  </div>
+  <% if @user %>
+    <%= hidden_field_tag :user_id, @user.id %>
+  <% end %>
+
 
   <div class="actions">
     <%= f.submit %>
