--- a/app/views/payees/edit.html.erb
+++ b/app/views/payees/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing payee</h1>
+<h1>Editing <%= @payee.name %>:</h1>
 
 <%= render 'form' %>
 
 <%= link_to 'Show', @payee %> |
-<%= link_to 'Back', payees_path %>
+<%= link_to 'Home', user_path(@payee.user) %>
