Passes one integration test with monban implemented.

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Welcome to Climb!</h1>
 <p>Dig Your Way Out of Debt.</p>
 
-<%= link_to "Sign In", new_session_path %>
+<%= link_to "Sign in", new_session_path %>
 <%= link_to "Sign Up!", new_user_path %>
