--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -5,7 +5,7 @@
   </div>
   <div>
     <%= form.label :password %>
-    <%= form.password_field :password_digest %>
+    <%= form.password_field :password %>
   </div>
   <div>
     <%= form.label :sms %>
