Modifies shoulda-matcher gem to fix tests.
Rails 4 + Rspec 3 equals sadface.
Had to do lots of fixing on this.
Had to add a rails_helper.
Had to modify the gem in the gemfile for shoulda-matchers, require: false
Had to add require 'shoulda/matchers' in rails helper.
Hopefully will be good now.

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -8,7 +8,7 @@
     <%= form.password_field :password %>
   </div>
   <div>
-    <%= form.label :sms %>
+    <%= form.label :sms_remind? %>
     <%= form.check_box :sms_remind? %>
   </div>
   <div>
