--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -16,10 +16,6 @@
     <%= f.email_field :email %>
   </div>
   <div>
-    <%= f.label :password %>
-    <%= f.password_field :password %>
-  </div>
-  <div>
     <%= f.label :sms_remind? %>
     <%= f.check_box :sms_remind? %>
   </div>
@@ -28,7 +24,7 @@
     <%= f.telephone_field :phone %>
   </div>
   <div>
-    <%= f.submit "Sign up" %>
+    <%= f.submit "Update!" %>
   </div>
 
 <% end %>
