--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,10 +1,9 @@
 <h1>Welcome to Climb!</h1>
-
-<% if current_user %>
-  <%= link_to "Edit Profile", edit_user_path(current_user) %>
-<% end %>
-
 <p>Dig Your Way Out of Debt.</p>
+<% if !current_user %>
+  <%= link_to "Log In", new_session_path %>
+  <%= link_to "Sign up", new_user_path %>
+<% else %>
+  <%= link_to "Log Out",  session_path, method: :delete %>
 
-<%= link_to "Sign in", new_session_path %>
-<%= link_to "Sign up", new_user_path %>
+<% end %>
