--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,10 +2,7 @@
 <p>Climb Your Way Out of Debt.</p>
 
 <% if current_user %>
-  <%= link_to "Edit Profile", edit_user_path(current_user) %>
-  <%= link_to "Add Payee", new_payee_path %>
-  <%= link_to "Log Out", session_path, method: :delete %>
-
+  <h2>Welcome <%= current_user.email %>!</h2>
 <% else %>
   <%= link_to "Sign in", new_session_path %>
   <%= link_to "Sign up", new_user_path %>
