Cleans up back and home links and nav.

--- a/app/views/bills/edit.html.erb
+++ b/app/views/bills/edit.html.erb
@@ -3,4 +3,4 @@
 <%= render 'form' %>
 
 <%= link_to 'Show', @bill %> |
-<%= link_to 'Back', bills_path %>
+<%= link_to 'Back', payee_path(@bill.payee) %>
