--- a/app/views/bills/show.html.erb
+++ b/app/views/bills/show.html.erb
@@ -41,4 +41,4 @@
 </p>
 
 <%= link_to 'Edit', edit_bill_path(@bill) %> |
-<%= link_to 'Back', bills_path %>
+<%= link_to 'Back', payee_path(@bill.payee) %>
